--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
         width: 40% !important;
         max-width: 40%;
       }
+
+      .mj-column-per-49 {
+        width: 49% !important;
+        max-width: 49%;
+      }
     }
 
   </style>
@@ -87,6 +92,11 @@
     .moz-text-html .mj-column-per-40 {
       width: 40% !important;
       max-width: 40%;
+    }
+
+    .moz-text-html .mj-column-per-49 {
+      width: 49% !important;
+      max-width: 49%;
     }
 
   </style>
@@ -185,7 +195,7 @@
                           <tbody>
                             <tr>
                               <td style="width:550px;">
-                                <img alt src="https://d3k81ch9hvuctc.cloudfront.net/company/NqV8Eq/images/3c328069-b7e3-4de1-a02f-9e955705a427.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="550" height="auto">
+                                <img alt src="https://d3k81ch9hvuctc.cloudfront.net/company/NqV8Eq/images/3c328069-b7e3-4de1-a02f-9e955705a427.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:20px;" width="550" height="auto">
                               </td>
                             </tr>
                           </tbody>
@@ -224,9 +234,9 @@
                           <tbody>
                             <tr>
                               <td align="center" bgcolor="#1e4d51" role="presentation" style="border:none;border-radius:3px;cursor:auto;mso-padding-alt:10px 25px;background:#1e4d51;" valign="middle">
-                                <p style="display:inline-block;background:#1e4d51;color:#ffffff;font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:20px;font-weight:normal;line-height:120%;letter-spacing:3px;margin:0;text-decoration:none;text-transform:none;padding:10px 25px;mso-padding-alt:0px;border-radius:3px;">
+                                <a href="#" style="display:inline-block;background:#1e4d51;color:#ffffff;font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:20px;font-weight:normal;line-height:120%;letter-spacing:3px;margin:0;text-decoration:none;text-transform:none;padding:10px 25px;mso-padding-alt:0px;border-radius:3px;" target="_blank">
                                   <mj-text> SEE YOUR CODE </mj-text>
-                                </p>
+                                </a>
                               </td>
                             </tr>
                           </tbody>
@@ -244,13 +254,185 @@
     </div>
     <!--[if mso | IE]></td></tr></table><![endif]-->
     <!-- 2 columns section -->
-    <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" bgcolor="white" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-    <div style="background:white;background-color:white;margin:0px auto;max-width:600px;">
-      <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:white;background-color:white;width:100%;">
+    <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" bgcolor="#FAF5F1" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+    <div style="background:#FAF5F1;background-color:#FAF5F1;margin:0px auto;max-width:600px;">
+      <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#FAF5F1;background-color:#FAF5F1;width:100%;">
         <tbody>
           <tr>
             <td style="direction:ltr;font-size:0px;padding:20px 0;text-align:center;">
-              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr></tr></table><![endif]-->
+              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:600px;" ><![endif]-->
+              <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
+                  <tbody>
+                    <tr>
+                      <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                        <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:30px;line-height:1;text-align:center;color:#1e4d51;">FIVE STAR FAVES</div>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <!--[if mso | IE]></td><td class="" style="vertical-align:top;width:294px;" ><![endif]-->
+              <div class="mj-column-per-49 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
+                  <tbody>
+                    <tr>
+                      <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
+                          <tbody>
+                            <tr>
+                              <td style="width:244px;">
+                                <a href="https://www.ever-eden.com/products/healing-eczema-treatment?utm_source=email&utm_medium=flow-email&utm_campaign=Welcome%20Email%202%20Other%3A%20Code%20Reminder%20%28T7sSxK%29&utm_id=RXpkYg&triplesource=klaviyo&bxid=01H38DMQ2MJ0B20401HZ5FEEHN&_kx=KmzKbdO4ij54hiFI3d-IERZWv1YpC7JKiMmWltLSBegHzzPi1y5B3GPMBrlHefGL.NqV8Eq" target="_blank">
+                                  <img alt="Image of Healing Eczema Treatment" src="https://cdn.shopify.com/s/files/1/0009/7137/4652/products/Eczema-Catalogue.jpg?v=1682498797" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="244" height="auto">
+                                </a>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                        <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:16px;line-height:1;text-align:center;color:#1e4d51;">Healing Eczema Treatment</div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="center" vertical-align="middle" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:separate;line-height:100%;">
+                          <tbody>
+                            <tr>
+                              <td align="center" bgcolor="#1e4d51" role="presentation" style="border:none;border-radius:3px;cursor:auto;mso-padding-alt:10px 25px;background:#1e4d51;" valign="middle">
+                                <a href="https://www.ever-eden.com/products/healing-eczema-treatment?utm_source=email&utm_medium=flow-email&utm_campaign=Welcome%20Email%202%20Other%3A%20Code%20Reminder%20%28T7sSxK%29&utm_id=RXpkYg&triplesource=klaviyo&bxid=01H38DMQ2MJ0B20401HZ5FEEHN&_kx=KmzKbdO4ij54hiFI3d-IERZWv1YpC7JKiMmWltLSBegHzzPi1y5B3GPMBrlHefGL.NqV8Eq" style="display:inline-block;background:#1e4d51;color:#ffffff;font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:16px;font-weight:normal;line-height:120%;margin:0;text-decoration:none;text-transform:none;padding:10px 25px;mso-padding-alt:0px;border-radius:3px;" target="_blank"> SHOP NOW </a>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <!--[if mso | IE]></td><td class="" style="vertical-align:top;width:294px;" ><![endif]-->
+              <div class="mj-column-per-49 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
+                  <tbody>
+                    <tr>
+                      <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
+                          <tbody>
+                            <tr>
+                              <td style="width:244px;">
+                                <a href="https://www.ever-eden.com/products/kids-happy-face-duo?utm_source=email&utm_medium=flow-email&utm_campaign=Welcome%20Email%202%20Other%3A%20Code%20Reminder%20%28T7sSxK%29&utm_id=RXpkYg&triplesource=klaviyo&bxid=01H38DMQ2MJ0B20401HZ5FEEHN&_kx=KmzKbdO4ij54hiFI3d-IERZWv1YpC7JKiMmWltLSBegHzzPi1y5B3GPMBrlHefGL.NqV8Eq" target="_blank">
+                                  <img alt="Image of Kids Happy Face Duo" src="https://cdn.shopify.com/s/files/1/0009/7137/4652/products/Peach.jpg?v=1683758279" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="244" height="auto">
+                                </a>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                        <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:16px;line-height:1;text-align:center;color:#1e4d51;">Kids Happy Face Duo</div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="center" vertical-align="middle" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:separate;line-height:100%;">
+                          <tbody>
+                            <tr>
+                              <td align="center" bgcolor="#1e4d51" role="presentation" style="border:none;border-radius:3px;cursor:auto;mso-padding-alt:10px 25px;background:#1e4d51;" valign="middle">
+                                <a href="https://www.ever-eden.com/products/kids-happy-face-duo?utm_source=email&utm_medium=flow-email&utm_campaign=Welcome%20Email%202%20Other%3A%20Code%20Reminder%20%28T7sSxK%29&utm_id=RXpkYg&triplesource=klaviyo&bxid=01H38DMQ2MJ0B20401HZ5FEEHN&_kx=KmzKbdO4ij54hiFI3d-IERZWv1YpC7JKiMmWltLSBegHzzPi1y5B3GPMBrlHefGL.NqV8Eq" style="display:inline-block;background:#1e4d51;color:#ffffff;font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:16px;font-weight:normal;line-height:120%;margin:0;text-decoration:none;text-transform:none;padding:10px 25px;mso-padding-alt:0px;border-radius:3px;" target="_blank"> SHOP NOW </a>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <!--[if mso | IE]></td><td class="" style="vertical-align:top;width:294px;" ><![endif]-->
+              <div class="mj-column-per-49 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
+                  <tbody>
+                    <tr>
+                      <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
+                          <tbody>
+                            <tr>
+                              <td style="width:244px;">
+                                <a href="https://www.ever-eden.com/products/kids-daily-1-2-3-routine?utm_source=email&utm_medium=flow-email&utm_campaign=Welcome%20Email%202%20Other%3A%20Code%20Reminder%20%28T7sSxK%29&utm_id=RXpkYg&triplesource=klaviyo&bxid=01H38DMQ2MJ0B20401HZ5FEEHN&_kx=KmzKbdO4ij54hiFI3d-IERZWv1YpC7JKiMmWltLSBegHzzPi1y5B3GPMBrlHefGL.NqV8Eq" target="_blank">
+                                  <img alt="Image of Kids Daily 1-2-3 Routine" src="https://cdn.shopify.com/s/files/1/0009/7137/4652/products/Happy-face-duo-_-SPF.jpg?v=1682498954" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="244" height="auto">
+                                </a>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                        <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:16px;line-height:1;text-align:center;color:#1e4d51;">Kids Daily 1-2-3 Routine</div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="center" vertical-align="middle" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:separate;line-height:100%;">
+                          <tbody>
+                            <tr>
+                              <td align="center" bgcolor="#1e4d51" role="presentation" style="border:none;border-radius:3px;cursor:auto;mso-padding-alt:10px 25px;background:#1e4d51;" valign="middle">
+                                <a href="https://www.ever-eden.com/products/kids-daily-1-2-3-routine?utm_source=email&utm_medium=flow-email&utm_campaign=Welcome%20Email%202%20Other%3A%20Code%20Reminder%20%28T7sSxK%29&utm_id=RXpkYg&triplesource=klaviyo&bxid=01H38DMQ2MJ0B20401HZ5FEEHN&_kx=KmzKbdO4ij54hiFI3d-IERZWv1YpC7JKiMmWltLSBegHzzPi1y5B3GPMBrlHefGL.NqV8Eq" style="display:inline-block;background:#1e4d51;color:#ffffff;font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:16px;font-weight:normal;line-height:120%;margin:0;text-decoration:none;text-transform:none;padding:10px 25px;mso-padding-alt:0px;border-radius:3px;" target="_blank"> SHOP NOW </a>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <!--[if mso | IE]></td><td class="" style="vertical-align:top;width:294px;" ><![endif]-->
+              <div class="mj-column-per-49 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
+                  <tbody>
+                    <tr>
+                      <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
+                          <tbody>
+                            <tr>
+                              <td style="width:244px;">
+                                <a href="https://www.ever-eden.com/products/nourishing-baby-face-cream?utm_source=email&utm_medium=flow-email&utm_campaign=Welcome%20Email%202%20Other%3A%20Code%20Reminder%20%28T7sSxK%29&utm_id=RXpkYg&triplesource=klaviyo&bxid=01H38DMQ2MJ0B20401HZ5FEEHN&_kx=KmzKbdO4ij54hiFI3d-IERZWv1YpC7JKiMmWltLSBegHzzPi1y5B3GPMBrlHefGL.NqV8Eq" target="_blank">
+                                  <img alt="Image of Nourishing Baby Face Cream" src="https://cdn.shopify.com/s/files/1/0009/7137/4652/products/baby_face_cream-compressor.jpg?v=1682498401" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="244" height="auto">
+                                </a>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                        <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:16px;line-height:1;text-align:center;color:#1e4d51;">Nourishing Baby Face Cream</div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="center" vertical-align="middle" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:separate;line-height:100%;">
+                          <tbody>
+                            <tr>
+                              <td align="center" bgcolor="#1e4d51" role="presentation" style="border:none;border-radius:3px;cursor:auto;mso-padding-alt:10px 25px;background:#1e4d51;" valign="middle">
+                                <a href="https://www.ever-eden.com/products/nourishing-baby-face-cream?utm_source=email&utm_medium=flow-email&utm_campaign=Welcome%20Email%202%20Other%3A%20Code%20Reminder%20%28T7sSxK%29&utm_id=RXpkYg&triplesource=klaviyo&bxid=01H38DMQ2MJ0B20401HZ5FEEHN&_kx=KmzKbdO4ij54hiFI3d-IERZWv1YpC7JKiMmWltLSBegHzzPi1y5B3GPMBrlHefGL.NqV8Eq" style="display:inline-block;background:#1e4d51;color:#ffffff;font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:16px;font-weight:normal;line-height:120%;margin:0;text-decoration:none;text-transform:none;padding:10px 25px;mso-padding-alt:0px;border-radius:3px;" target="_blank"> SHOP NOW </a>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <!--[if mso | IE]></td></tr></table><![endif]-->
             </td>
           </tr>
         </tbody>
